<resources>
    <string name="app_name">Home Chef Hub</string>
    <string name="action_settings">Settings</string>
    <string name="pratos_principais">Pratos Prícipais</string>
    <string name="Sobremesas">Sobremesas</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="escuro">Modo Escuro</string>
    <string name="claro">Modo Claro</string>
    <string name="receita">Receita</string>
    <string name="login"> Login</string>
    <string name="entradas"> Entradas </string>
    <string name="principal"> Prato Principal</string>
    <string name="sobremesas"> Sobremesas </string>
    <string name="bebidas"> Bebidas</string>
    <string name="calories">Calorias: %1$d</string>
    <string name="scrollview_content_description">Detalhes da Receita</string>
    <string name="recipe_image_desc">Imagem da Receita</string>
    <string-array name="recipe_types">
        <item>Tipo de Receita</item>
        <item>Entrada</item>
        <item>Prato Principal</item>
        <item>Sobremesa</item>
        <item>Bebida</item>
    </string-array>
</resources>